@@ -122,10 +122,13 @@ module UI
 
         def on_show_in_tray_checkbutton_toggled
             @dont_quit_checkbutton.sensitive = \
-                @show_in_tray_checkbutton.active?
+                @dont_show_at_startup_checkbutton.sensitive = \
+                    @show_in_tray_checkbutton.active?
+            
 
             if !@show_in_tray_checkbutton.active?
                 @dont_quit_checkbutton.active = false
+                @dont_show_at_startup_checkbutton.active = false
             end
 
             @prefs.show_in_tray = @show_in_tray_checkbutton.active?
@@ -133,6 +136,11 @@ module UI
             if @statusicon
                 @statusicon.visible = @show_in_tray_checkbutton.active?
             end
+        end
+
+        def on_dont_show_at_startup_checkbutton_toggled
+            @prefs.dont_show_at_startup = \
+                @dont_show_at_startup_checkbutton.active?
         end
 
         def on_dont_quit_checkbutton_toggled
@@ -156,7 +164,9 @@ module UI
             @print_vbox.visible = Fantasdic::UI::SUPPORTS_PRINT
 
             @tray_vbox.visible = !@statusicon.nil?
-            @dont_quit_checkbutton.active = @prefs.dont_quit        
+            @dont_quit_checkbutton.active = @prefs.dont_quit
+            @dont_show_at_startup_checkbutton.active = \
+                @prefs.dont_show_at_startup
             @show_in_tray_checkbutton.active = @prefs.show_in_tray
 
             @lookup_at_start_checkbutton.active = @prefs.lookup_at_start
